# django-demo-GDSC

./: .gitignore  README.md  pyproject.toml
src/api/: admin.py  models.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/api/serializers/: ingredient.py  pizza.py  pizza_ingredient.py  user.py
src/demo/: settings.py
